tests/integration/snapshots/integration__conformance__n_number_0_capital_e+.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
[0E+]
stdout ---

stderr ---
error: expected digit after exponent indicator, found `]`
 --> stdin:1:5
  |
1 | [0E+]
  |  ---^
  |  ||
  |  |exponent indicator found here
  |  number with exponent found here
